27-extraneous-font-awesome-files: placed performance timer inside console

--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
           href="./assets/custom/css/custom.css"> </head>
 
   <body>
+    <script>
+      console.time('totalTime');
+
+    </script>
     <main class="g-pt-65 g-pt-90--md">
       <!-- Header -->
       <header id="js-header"
@@ -1109,6 +1113,10 @@
           duration: 700
         });
       });
+
+    </script>
+    <script>
+      console.timeEnd('totalTime');
 
     </script>
   </body>
