27-extraneous-font-awesome-files: commented out unused hs-icon and icon-7.css

--- a/index.html
+++ b/index.html
@@ -34,16 +34,16 @@
           href="./assets/vendor/icon-line/css/simple-line-icons.css">
     <link rel="stylesheet"
           href="./assets/vendor/icon-awesome/css/fontawesome-all.min.css">
-    <link rel="stylesheet"
-          href="./assets/vendor/icon-hs/style.css">
+    <!--  <link rel="stylesheet"
+          href="./assets/vendor/icon-hs/style.css"> -->
     <!-- CSS Implementing Plugins -->
     <link rel="stylesheet"
           href="./assets/vendor/hamburgers/hamburgers.min.css">
     <link rel="stylesheet"
           href="./assets/vendor/slick-carousel/slick/slick.css">
     <!-- Revolution Slider -->
-    <link rel="stylesheet"
-          href="./assets/vendor/revolution-slider/revolution/fonts/pe-icon-7-stroke/css/pe-icon-7-stroke.css">
+    <!--<link rel="stylesheet"
+          href="./assets/vendor/revolution-slider/revolution/fonts/pe-icon-7-stroke/css/pe-icon-7-stroke.css">-->
     <link rel="stylesheet"
           href="./assets/vendor/revolution-slider/revolution/css/settings.css">
     <link rel="stylesheet"
