27-extraneous-font-awesome-files: commented out jquery-migrate

--- a/index.html
+++ b/index.html
@@ -840,7 +840,8 @@
               <div class="card-body">
                 <h4 class="card-title"><a href="https://photos.app.goo.gl/xsfrqKKkmplU1D133" target="_blank" rel="noopener">Game Nights</a></h4>
                 <p class="card-text">Employees always have a good time at our monthly game nights in our wonderful office
-                  space.</p>
+                  space.
+                </p>
               </div>
             </div>
             <div class="card"> <img class="card-img-top"
@@ -1007,7 +1008,7 @@
       </a> </main>
     <!-- JS Global Compulsory -->
     <script src="./assets/vendor/jquery/jquery.min.js "></script>
-    <script src="./assets/vendor/jquery-migrate/jquery-migrate.min.js "></script>
+    <!--  <script src="./assets/vendor/jquery-migrate/jquery-migrate.min.js "></script> -->
     <script src="./assets/vendor/popper.js/popper.min.js "></script>
     <script src="./assets/vendor/bootstrap/bootstrap.min.js "></script>
     <!-- JS Implementing Plugins -->
@@ -1024,7 +1025,7 @@
     <script src="./assets/vendor/revolution-slider/revolution/js/jquery.themepunch.revolution.min.js "></script>
     <script src='./assets/vendor/revolution-slider/revolution-addons/slicey/js/revolution.addon.slicey.min.js'></script>
     <script src="./assets/vendor/revolution-slider/revolution/js/extensions/revolution.extension.actions.min.js "></script>
-    <script src="./assets/vendor/revolution-slider/revolution/js/extensions/revolution.extension.carousel.min.js "></script>
+    <!--<script src="./assets/vendor/revolution-slider/revolution/js/extensions/revolution.extension.carousel.min.js "></script>-->
     <script src="./assets/vendor/revolution-slider/revolution/js/extensions/revolution.extension.kenburn.min.js "></script>
     <script src="./assets/vendor/revolution-slider/revolution/js/extensions/revolution.extension.layeranimation.min.js "></script>
     <script src="./assets/vendor/revolution-slider/revolution/js/extensions/revolution.extension.migration.min.js "></script>
