27-extraneous-font-awesome-files: uncommented jquery-migrate

--- a/index.html
+++ b/index.html
@@ -1008,7 +1008,7 @@
       </a> </main>
     <!-- JS Global Compulsory -->
     <script src="./assets/vendor/jquery/jquery.min.js "></script>
-    <!--  <script src="./assets/vendor/jquery-migrate/jquery-migrate.min.js "></script> -->
+    <script src="./assets/vendor/jquery-migrate/jquery-migrate.min.js "></script>
     <script src="./assets/vendor/popper.js/popper.min.js "></script>
     <script src="./assets/vendor/bootstrap/bootstrap.min.js "></script>
     <!-- JS Implementing Plugins -->
