27-extraneous-font-awesome-files: readded link to icon-hs css inside index

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
           href="./assets/vendor/icon-line/css/simple-line-icons.css">-->
     <link rel="stylesheet"
           href="./assets/vendor/icon-awesome/css/fontawesome-all.min.css">
-    <!--<link rel="stylesheet"
-          href="./assets/vendor/icon-hs/style.css">-->
+    <link rel="stylesheet"
+          href="./assets/vendor/icon-hs/style.css">
     <!-- CSS Implementing Plugins -->
     <link rel="stylesheet"
           href="./assets/vendor/hamburgers/hamburgers.min.css">
