10-internship-page: added a new intern page

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <meta name="author" content="Andrew Cooper, Sam Peake, Joe Thompson">
     <!-- Favicon -->
     <link rel="shortcut icon" href="./assets/custom/img/case/navLogo.png">
+    <link rel="shortcut icon" href="./assets/custom/img/case/navLogo.png">
     <!-- Google Fonts -->
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans%3A300%2C400%2C600%2C700%2C800%7CPlayfair+Display%7CRoboto%7CRaleway%7CSpectral%7CRubik" type='text/css'>
     <!-- CSS Global Compulsory -->
@@ -110,9 +111,7 @@
               <div id="promoSliderLayer7" class="tp-caption NotGeneric-CallToAction rev-btn rs-parallaxlevel-0" style="z-index: 9; font-weight: bold; white-space: nowrap; outline: none; box-shadow: none; box-sizing: border-box; text-transform: uppercase; border-width: 2px;"
                 data-x="['center','center','center','center']" data-y="['middle','middle','middle','middle']" data-hoffset="['0','0','0','0']" data-voffset="['134','134','80','65']" data-width="none" data-height="none" data-whitespace="nowrap" data-transform_idle="o:1;"
                 data-transform_hover="o:1;rX:0;rY:0;rZ:0;z:0;s:300;e:Power1.easeInOut;" data-style_hover="c:rgba(255, 255, 255, 1.00);bc:rgba(255, 255, 255, 1.00);cursor:pointer;" data-transform_in="y:50px;opacity:0;s:1500;e:Power4.easeInOut;" data-transform_out="y:[175%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;"
-                data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="1250" data-splitin="none" data-splitout="none" data-actions='[
-                     {"event":"click","action":"scrollbelow","offset":"0px"}
-                   ]' data-responsive_offset="on" data-responsive="off">Learn More </div>
+                data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="1250" data-splitin="none" data-splitout="none" data-actions='[{"event":"click","action":"scrollbelow","offset":"0px"}]' data-responsive_offset="on" data-responsive="off">Learn More </div>
             </li>
           </ul>
           <div class="tp-static-layers"></div>
@@ -129,7 +128,6 @@
               <!-- Article -->
               <article class="d-flex flex-wrap text-center g-color-gray-dark-v3" style="min-height: 100%">
                 <div class="order-2 w-100"> <img class="w-100 img-fluid" style="min-height: 100%" src="./assets/custom/img/online/sepia_desk.jpg" alt="Sepia Desk"> </div>
-                <!-- Arrows u-ns-bg-v1-bottom -->
                 <div id="work-that-matters" class="order-1 w-100 g-z-index-1 g-py-50 g-py-100--md g-px-15 g-px-50--md" style="min-height: 100%">
                   <h3 class="text-uppercase g-line-height-1_1 g-font-weight-800 g-font-size-25 g-font-size-30--md g-mb-20"><strong>Work that Matters</strong></h3>
                   <p class="mb-0">Case Consulting is a software services company that supports the mission critical requirements of the federal government and private industry by providing highly talented and exceptionally skilled software developers, architects, software
@@ -242,7 +240,7 @@
                   <h3 class="h5 text-uppercase g-font-weight-800">Technology Package</h3>
                   <ul class="list-unstyled g-font-size-12 g-mb-30 g-mb-0--md">
                     <li class="g-pos-rel g-pl-10 g-mb-15"><i class="fas fa-angle-right bullet_top  g-left-0 g-font-size-16 g-color-primary"></i>
-                      <p class="list_elem">$1,800 per calendar year towards the purchase of employee computer/tablet or other technology related device</p>
+                      <p class="list_elem">$1,800 per calendar year towards purchase of employee computer/tablet or other technology related device</p>
                     </li>
                     <li class="g-pos-rel g-pl-10 g-mb-15"><i class="fas fa-angle-right bullet_top  g-left-0 g-font-size-16 g-color-primary"></i>
                       <p class="list_elem">Verizon 4G Mobile Wi-Fi Hotspot</p>
@@ -417,7 +415,6 @@
                       and configuration management processes and systems. Plans for transition of the development and/or production environment to new technology. Recommends and plans server recapitalization. Performs server performance tuning. Baselines
                       and forecasts server performance data and tunes server hardware and software configurations. Utilizes system software to monitor the performance of system files; manages system data to maintain performance efficiencies. Studies system
                       requirements to determine proper server installation methods and procedures. May provide 24x7 operational support.
-                    </p>
                   </div>
                 </row>
               </div>
@@ -433,8 +430,10 @@
                     <p class="g-color-white"> Summer Internships take place from May to August in the Make Offices in Reston, Virginia, within the metropolitan area of Washington, D.C. The interns will design and implement software applications as part of a collaborative team
                       of interns and professional software developers. The intern will gain experience in full stack development using modern web technologies, including Amazon Web Services (AWS). Interns will also learn best practices in version control
                       systems using GitHub, and will incorporate Agile methodologies for self-organization and regular delivery of code for production. The intern will develop communication skills with customers to produce useful software for the client.
-                    </p>
                   </div>
+                </row>
+                <row>
+                  <div class="text-center"> <a href="./intern.html" type="button" class="btn btn-info btn-lg" role="button">Learn More</a> </div>
                 </row>
               </div>
             </div>
@@ -495,6 +494,7 @@
           </div> <br/> <br/> <br/> </div>
       </section>
       <!-- End Awards Section -->
+      <!-- Events Section Content -->
       <!-- Events Section Content -->
       <section id="events" class="g-theme-bg-gray-light-v1 g-py-50">
         <div class="container text-center g-max-width-750 g-mb-20 g-pt-10 g-pb-10">
@@ -631,7 +631,9 @@
                 <div class="col-md-6 col-lg-12 g-mb-60 g-mb-0--md g-mb-60--lg">
                   <div class="u-heading-v2-2--bottom g-brd-primary g-mb-30">
                     <h2 class="text-uppercase u-heading-v2__title g-font-weight-800 g-font-size-30 g-font-size-40--md g-color-white mb-0">Get in touch</h2> </div>
-                  <p class="g-color-gray-light-v4 mb-0">Case Consulting has an established reputation and level of trust with the client, so contact us to discuss how we can continue to build a productive relationship and deliver impeccable results for our clients.</p>
+                  <p class="g-color-gray-light-v4-mb-0">
+                    Case Consulting has an established reputation and level of trust with the client, so contact us to discuss how we can continue to build a productive relationship and deliver impeccable results for our clients.
+                  </p>
                 </div>
                 <div class="col-md-6 col-lg-12 d-md-flex d-lg-block align-self-center">
                   <address class="text-uppercase g-font-size-12 mb-0">
@@ -691,7 +693,6 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAf66JJmp2VOldGTrVNOmMumlB5U6sVBSI&callback=initMap " async defer></script>
     <script src="./assets/custom/js/plugins/gmaps-ini.js "></script>
     <!-- JS Revolution Slider -->
-
     <script src="./assets/vendor/revolution-slider/revolution/js/jquery.themepunch.tools.min.js "></script>
     <script src="./assets/vendor/revolution-slider/revolution/js/jquery.themepunch.revolution.min.js "></script>
     <script src='./assets/vendor/revolution-slider/revolution-addons/slicey/js/revolution.addon.slicey.min.js'></script>
