--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
           href="./assets/custom/img/case/navLogo.png">
     <!-- Google Fonts -->
     <link rel="stylesheet"
-          href="https://fonts.googleapis.com/css?family=Open+Sans%3A300%2C400%2C600%2C700%2C800%7CPlayfair+Display%7CRoboto%7CRaleway%7CSpectral%7CRubik">
+          href="http://fonts.googleapis.com/css?family=Open+Sans%3A300%2C400%2C600%2C700%2C800%7CPlayfair+Display%7CRoboto%7CRaleway%7CSpectral%7CRubik"
+  
+          type='text/css'>
     <!-- CSS Global Compulsory -->
     <link rel="stylesheet"
           href="./assets/vendor/bootstrap/bootstrap.min.css">
