10-internship-page: full internship skeleton

--- a/intern.html
+++ b/intern.html
@@ -53,13 +53,15 @@
               <div class="collapse navbar-collapse align-items-center flex-sm-row"
                 id="navBar">
                 <ul id="js-scroll-nav" class="navbar-nav text-uppercase g-font-weight-700 g-font-size-11 g-pt-20 g-pt-5--lg ml-auto">
-                  <li class="nav-item g-mr-15--lg g-mb-7 g-mb-0--lg active"> <a href="#overview" class="nav-link p-0">About</a> </li>
-                  <li class="nav-item g-mx-15--lg g-mb-7 g-mb-0--lg">
-                  <a href="#requirements" class="nav-link p-0">Requirements</a> </li>
-                  <li class="nav-item g-mx-15--lg g-mb-7 g-mb-0--lg"> <a href="#faq" class="nav-link p-0">FAQ</a> </li>
-                  <li class="nav-item g-mx-15--lg g-mb-7 g-mb-0--lg">
-                  <a href="#Testimonial" class="nav-link p-0">testimonial</a> </li>
-                  <li class="nav-item g-mx-15--lg g-mb-7 g-mb-0--lg"> <a href="#contact" class="nav-link p-0">Contact</a> </li>
+                  <li class="g-mr-30--lg g-mb-7 g-mb-0--lg active"> <a href="./index.html" class="nav-link p-0">Home</a> </li>
+                  <li
+                    class="nav-item g-mr-15--lg g-mb-7 g-mb-0--lg active"> <a href="#overview" class="nav-link p-0">About</a> </li>
+                    <li class="nav-item g-mx-15--lg g-mb-7 g-mb-0--lg">
+                    <a href="#requirements" class="nav-link p-0">Requirements</a>                      </li>
+                    <li class="nav-item g-mx-15--lg g-mb-7 g-mb-0--lg"> <a href="#faq" class="nav-link p-0">FAQ</a> </li>
+                    <li class="nav-item g-mx-15--lg g-mb-7 g-mb-0--lg">
+                    <a href="#Testimonial" class="nav-link p-0">Testimonials</a>                      </li>
+                    <li class="nav-item g-mx-15--lg g-mb-7 g-mb-0--lg"> <a href="#contact" class="nav-link p-0">Contact</a> </li>
                 </ul>
                 <a class="navbar-brand u-header__log">
                   <img src="./assets/custom/img/awards/2018_BPTW_logo_C1.png" alt="Best places to work 2018 logo" class ="nav-pad">
@@ -201,19 +203,132 @@
               <div class="u-heading-v2-2--bottom g-brd-primary g-mb-20">
                 <h2 class="text-uppercase u-heading-v2__title g-font-weight-800 g-font-size-30 g-font-size-40--md">Frequently Asked Questions</h2> </div>
             </div>
-          </div>
-        </div> <br/> <br/> <br/> <br/> <br/> </section>
-      <section id="Testimonial">
+            <div class="container">
+              <!-- Icon Blocks -->
+              <div class="row">
+                <div class="col-md-5 g-mb-40">
+                  <!-- Icon Blocks -->
+                  <div class="media">
+                    <div class="d-flex g-mt-25 g-mr-40"> <span class="d-block g-color-primary g-font-size-48 g-line-height-1">
+                      </span> </div>
+                    <div class="media-body align-self-center">
+                      <h3 class="h5 text-uppercase g-font-weight-800">Question 1</h3>
+                      <ul class="list-unstyled g-font-size-12 g-mb-30 g-mb-0--md">
+                        <li class="g-pos-rel g-pl-10 g-mb-15"> <i class="fas fa-angle-right bullet_top  g-left-0 g-font-size-16 g-color-primary"></i>
+                          <p class="list_elem"> Monthly contribution of 3% of your salary in your <a href="http://www.sharebuilder401k.com/">401k</a>,
+                            without the requirement of an employee contribution </p>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                  <!-- End Icon Blocks -->
+                </div>
+                <div class="col-md-5 offset-md-2 g-mb-40">
+                  <!-- Icon Blocks -->
+                  <div class="media">
+                    <div class="d-flex g-mt-25 g-mr-40"> <span class="d-block g-color-primary g-font-size-48 g-line-height-1">
+                      </span> </div>
+                    <div class="media-body align-self-center">
+                      <h3 class="h5 text-uppercase g-font-weight-800">Question 2</h3>
+                      <ul class="list-unstyled g-font-size-12 g-mb-30 g-mb-0--md">
+                        <li class="g-pos-rel g-pl-10 g-mb-15"> <i class="fas fa-angle-right bullet_top  g-left-0 g-font-size-16 g-color-primary"></i>
+                          <p class="list_elem"> Monthly contribution of 3% of your salary in your <a href="http://www.sharebuilder401k.com/">401k</a>,
+                            without the requirement of an employee contribution </p>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                  <!-- End Icon Blocks -->
+                </div>
+              </div>
+              <!-- End Icon Blocks -->
+              <!-- Icon Blocks -->
+              <div class="row">
+                <div class="col-md-5 g-mb-40">
+                  <!-- Icon Blocks -->
+                  <div class="media">
+                    <div class="d-flex g-mt-25 g-mr-40"> <span class="d-block g-color-primary g-font-size-48 g-line-height-1">
+                      </span> </div>
+                    <div class="media-body align-self-center">
+                      <h3 class="h5 text-uppercase g-font-weight-800">Question 3</h3>
+                      <ul class="list-unstyled g-font-size-12 g-mb-30 g-mb-0--md">
+                        <li class="g-pos-rel g-pl-10 g-mb-15"> <i class="fas fa-angle-right bullet_top  g-left-0 g-font-size-16 g-color-primary"></i>
+                          <p class="list_elem"> Monthly contribution of 3% of your salary in your <a href="http://www.sharebuilder401k.com/">401k</a>,
+                            without the requirement of an employee contribution </p>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                  <!-- End Icon Blocks -->
+                </div>
+                <div class="col-md-5 offset-md-2 g-mb-40">
+                  <!-- Icon Blocks -->
+                  <div class="media">
+                    <div class="d-flex g-mt-25 g-mr-40"> <span class="d-block g-color-primary g-font-size-48 g-line-height-1">
+                      </span> </div>
+                    <div class="media-body align-self-center">
+                      <h3 class="h5 text-uppercase g-font-weight-800">Question 4</h3>
+                      <ul class="list-unstyled g-font-size-12 g-mb-30 g-mb-0--md">
+                        <li class="g-pos-rel g-pl-10 g-mb-15"> <i class="fas fa-angle-right bullet_top  g-left-0 g-font-size-16 g-color-primary"></i>
+                          <p class="list_elem"> Monthly contribution of 3% of your salary in your <a href="http://www.sharebuilder401k.com/">401k</a>,
+                            without the requirement of an employee contribution </p>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                  <!-- End Icon Blocks -->
+                </div>
+              </div>
+              <!-- Icon Blocks -->
+              <div class="row">
+                <div class="col-md-5 g-mb-40 g-mb-0--md">
+                  <!-- Icon Blocks -->
+                  <div class="media">
+                    <div class="d-flex g-mt-25 g-mr-40"> <span class="d-block g-color-primary g-font-size-48 g-line-height-1">
+                      </span> </div>
+                    <div class="media-body align-self-center">
+                      <h3 class="h5 text-uppercase g-font-weight-800">Question 5</h3>
+                      <ul class="list-unstyled g-font-size-12 g-mb-30 g-mb-0--md">
+                        <li class="g-pos-rel g-pl-10 g-mb-15"> <i class="fas fa-angle-right bullet_top  g-left-0 g-font-size-16 g-color-primary"></i>
+                          <p class="list_elem"> Monthly contribution of 3% of your salary in your <a href="http://www.sharebuilder401k.com/">401k</a>,
+                            without the requirement of an employee contribution </p>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-5 offset-md-2">
+                  <!-- Icon Blocks -->
+                  <div class="media">
+                    <div class="d-flex g-mt-25 g-mr-40"> <span class="d-block g-color-primary g-font-size-48 g-line-height-1">
+                      </span> </div>
+                    <div class="media-body align-self-center">
+                      <h3 class="h5 text-uppercase g-font-weight-800">Question 6</h3>
+                      <ul class="list-unstyled g-font-size-12 g-mb-30 g-mb-0--md">
+                        <li class="g-pos-rel g-pl-10 g-mb-15"> <i class="fas fa-angle-right bullet_top  g-left-0 g-font-size-16 g-color-primary"></i>
+                          <p class="list_elem"> Monthly contribution of 3% of your salary in your <a href="http://www.sharebuilder401k.com/">401k</a>,
+                            without the requirement of an employee contribution </p>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                  <!-- End Icon Blocks -->
+                </div>
+              </div>
+            </div>
+          </div> <br/> <br/> <br/> <br/> <br/> </section>
+      <section id="Testimonial" class="testimonial">
         <div class="container-fluid">
           <div class="g-pt-100 g-pb-30">
             <div class="container text-center g-max-width-750 g-mb-20 g-pt-10">
               <div class="u-heading-v2-2--bottom g-brd-primary g-mb-20">
-                <h2 class="text-uppercase u-heading-v2__title g-font-weight-800 g-font-size-30 g-font-size-40--md">Testimonial's</h2> </div>
+                <h2 class="text-uppercase u-heading-v2__title g-font-weight-800 g-font-size-30 g-font-size-40--md g-color-white">Testimonials</h2> </div>
             </div>
             <div class="card-deck g-mx-20 g-my-20">
               <!-- Item -->
-              <div class="row justify-content-around">
-                <div class="card"> <img class="card-img-top" src="" alt="Insert Photo Here">
+              <div class="row justify-content-around" style="margin-top: 3rem">
+                <div class="card" style="max-width:30%"> <img class="card-img-top" src="./assets/custom/img/temp_internship/person.jpg"
+                    alt="Insert Photo Here">
                   <div class="card-body">
                     <h4 class="card-title text-center"><a target="_blank" rel="noopener">Jermy Song</a></h4>
                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
@@ -228,7 +343,8 @@
                       massa tincidunt. Lectus quam id leo in vitae turpis.</p>
                   </div>
                 </div>
-                <div class="card"> <img class="card-img-top" src="" alt="Insert Photo Here">
+                <div class="card" style="max-width:30%"> <img class="card-img-top" src="./assets/custom/img/temp_internship/long_head.jpg"
+                    alt="Insert Photo Here">
                   <div class="card-body">
                     <h4 class="card-title text-center"><a target="_blank" rel="noopener">Billy Idol</a></h4>
                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
