10-internship-page: full internship skeleton

--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
                   </div>
                 </row>
                 <row>
-                  <div class="text-center"> <a href="./intern.html" type="button" class="btn btn-info btn-lg" role="button">Learn More</a> </div>
+                  <div class="text-center"> <a href="./intern.html" type="button" class="btn btn-lg" role="button" style="color:black">Learn More</a> </div>
                 </row>
               </div>
             </div>
