10-internship-page: testimonial template

--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <meta name="author" content="Andrew Cooper, Sam Peake, Joe Thompson">
     <!-- Favicon -->
     <link rel="shortcut icon" href="./assets/custom/img/case/navLogo.png">
-    <link rel="shortcut icon" href="./assets/custom/img/case/navLogo.png">
     <!-- Google Fonts -->
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans%3A300%2C400%2C600%2C700%2C800%7CPlayfair+Display%7CRoboto%7CRaleway%7CSpectral%7CRubik" type='text/css'>
     <!-- CSS Global Compulsory -->
@@ -415,6 +414,7 @@
                       and configuration management processes and systems. Plans for transition of the development and/or production environment to new technology. Recommends and plans server recapitalization. Performs server performance tuning. Baselines
                       and forecasts server performance data and tunes server hardware and software configurations. Utilizes system software to monitor the performance of system files; manages system data to maintain performance efficiencies. Studies system
                       requirements to determine proper server installation methods and procedures. May provide 24x7 operational support.
+                    </p>
                   </div>
                 </row>
               </div>
@@ -430,10 +430,11 @@
                     <p class="g-color-white"> Summer Internships take place from May to August in the Make Offices in Reston, Virginia, within the metropolitan area of Washington, D.C. The interns will design and implement software applications as part of a collaborative team
                       of interns and professional software developers. The intern will gain experience in full stack development using modern web technologies, including Amazon Web Services (AWS). Interns will also learn best practices in version control
                       systems using GitHub, and will incorporate Agile methodologies for self-organization and regular delivery of code for production. The intern will develop communication skills with customers to produce useful software for the client.
+                    </p>
                   </div>
                 </row>
                 <row>
-                  <div class="text-center"> <a href="./intern.html" type="button" class="btn btn-lg" role="button" style="color:black">Learn More</a> </div>
+                  <div class="text-center"> <a href="./intern.html" type="button" class="btn btn-info btn-lg" role="button" style="color:black">Learn More</a> </div>
                 </row>
               </div>
             </div>
@@ -527,7 +528,7 @@
             <div class="card"> <img class="card-img-top" src="./assets/custom/img/events/2017csrc_min.jpg" alt="Recruiting @ VT CSRC Career Fair">
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="https://photos.app.goo.gl/mckEE6nkiRxVkaGh1" target="_blank" rel="noopener">Recruiting @ VT CSRC Career Fair</a></h4>
+                        <a href="https://photos.app.goo.gl/mckEE6nkiRxVkaGh1" target="_blank" rel="noopener">Recruiting @ VT CSRC Career Fair</a></h4>
                 <p class="card-text">Several employees attended the Virginia Tech Computer Science Resources Consortium Career Fair in search of another group of interns for the Summer of 2018!</p>
               </div>
             </div>
@@ -609,14 +610,14 @@
         <div class="text-center">
           <a href="#collapseEvents" class="btn btn-primary btn-lg collapseButton" data-toggle="collapse" aria-expanded="false" aria-controls="collapseEvents">
 
-          <span class="collapsed">
-            <i class="fas fa-chevron-down"></i>
-          </span>
-          <span class="expanded">
-            <i class="fas fa-chevron-up"></i>
-          </span>
+                <span class="collapsed">
+                  <i class="fas fa-chevron-down"></i>
+                </span>
+                <span class="expanded">
+                  <i class="fas fa-chevron-up"></i>
+                </span>
 
-          </a>
+                </a>
         </div>
 
         <!-- Row End -->
@@ -631,9 +632,7 @@
                 <div class="col-md-6 col-lg-12 g-mb-60 g-mb-0--md g-mb-60--lg">
                   <div class="u-heading-v2-2--bottom g-brd-primary g-mb-30">
                     <h2 class="text-uppercase u-heading-v2__title g-font-weight-800 g-font-size-30 g-font-size-40--md g-color-white mb-0">Get in touch</h2> </div>
-                  <p class="g-color-gray-light-v4-mb-0">
-                    Case Consulting has an established reputation and level of trust with the client, so contact us to discuss how we can continue to build a productive relationship and deliver impeccable results for our clients.
-                  </p>
+                  <p class="g-color-gray-light-v4 mb-0">Case Consulting has an established reputation and level of trust with the client, so contact us to discuss how we can continue to build a productive relationship and deliver impeccable results for our clients.</p>
                 </div>
                 <div class="col-md-6 col-lg-12 d-md-flex d-lg-block align-self-center">
                   <address class="text-uppercase g-font-size-12 mb-0">
@@ -785,7 +784,5 @@
 
     </script>
   </body>
-
-
 
 </html>
