28-awards-changes: bptw now works on moible

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <header id="js-header" class="u-header u-header--sticky-top u-header--change-appearance g-z-index-9999" data-header-fix-moment="100">
         <div class="u-header__section g-bg-white g-transition-0_3 g-py-6 g-py-18--md" data-header-fix-moment-exclude="g-py-18--md" data-header-fix-moment-classes="u-shadow-v18 g-py-13--md">
           <nav class="navbar navbar-expand-lg g-py-0">
-            <div class="container g-pos-rel">
+            <div class="container justify-content-between g-pos-rel">
               <!-- Logo --><a href="#body" class="js-go-to navbar-brand u-header__logo" data-type="static">
                 <img class="u-header__logo-img u-header__logo-img--main g-width-110" src="./assets/custom/img/case/logo-banner.gif" alt="Case Consulting">
               </a>
@@ -62,9 +62,12 @@
                     <a href="#events" class="nav-link p-0">Events</a> </li>
                   <li class="nav-item g-mx-15--lg g-mb-7 g-mb-0--lg"> <a href="#contact" class="nav-link p-0">Contact</a> </li>
                 </ul>
+              </div>
+              <div class="bptw">
                 <a class="navbar-brand u-header__log">
                   <img src="./assets/custom/img/awards/2018_BPTW_logo_C1.png" alt="Best places to work 2018 logo" class ="nav-pad">
-                </a> </div>
+                </a>
+              </div>
               <!-- End Navigation -->
               <!-- Responsive Toggle Button --><button class="navbar-toggler btn g-line-height-1 g-brd-none g-pa-0 g-pos-abs g-top-20 g-right-0" type="button" aria-label="Toggle navigation" aria-expanded="false" aria-controls="navBar" data-toggle="collapse" data-target="#navBar">
                 <span class="hamburger hamburger--slider">
