--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
               <!-- Article -->
               <article class="d-flex flex-wrap text-center g-color-white" style="min-height: 100%">
                 <div class="order-1 w-100"> <img class="w-100 h-100" style="min-height: 100%" src="./assets/custom/img/online/meeting-min.jpg" alt="Meeting"> </div>
-                <div class="order-2 w-100 g-z-index-1 g-py-50 g-py-100--md g-px-15 g-px-50--md g-theme-bg-color-1" style="min-height: 100%">
+                <div class="order-md-2 w-100 g-z-index-1 g-py-50 g-py-100--md g-px-15 g-px-50--md g-theme-bg-color-1" style="min-height: 100%">
                   <h3 class="text-uppercase g-line-height-1_1 g-font-weight-800 g-font-size-25 g-font-size-30--md g-color-white g-mb-20">Clients that care</h3>
                   <div class="u-heading-v2-2--top g-brd-primary"></div>
                   <p class="g-color-gray-light-v4 mb-0">We provide top-notch IT staff to Commercial and Federal Government customers with experience in delivering superior system engineering expertise, project management support, and application development and design via Agile methodologies.
