--- a/index.html
+++ b/index.html
@@ -514,16 +514,16 @@
               <p class="card-text">This year we had a record number of employees go to AWS re:Invent in Las Vegas!</p>
             </div>
           </div>
+          <div class="card"> <img class="card-img-top" src="./assets/custom/img/events/2017picnic_min.jpg" alt="2017 Family Picnic">
+            <div class="card-body">
+              <h4 class="card-title"><a href="https://photos.app.goo.gl/8RefFAJ1i7EY6yqT2" target="_blank" rel="noopener">2017 Family Picnic</a></h4>
+              <p class="card-text">We always have a good time getting together with each other and our families. This year we had ponies, a bounce house, face painting, and a whole lot of fun! Thanks to everyone for coming out!</p>
+            </div>
+          </div>
         </div>
 
         <div class="collapse" id="collapseEvents">
           <div class="card-deck g-mx-20 g-my-20">
-            <div class="card"> <img class="card-img-top" src="./assets/custom/img/events/2017picnic_min.jpg" alt="2017 Family Picnic">
-              <div class="card-body">
-                <h4 class="card-title"><a href="https://photos.app.goo.gl/8RefFAJ1i7EY6yqT2" target="_blank" rel="noopener">2017 Family Picnic</a></h4>
-                <p class="card-text">We always have a good time getting together with each other and our families. This year we had ponies, a bounce house, face painting, and a whole lot of fun! Thanks to everyone for coming out!</p>
-              </div>
-            </div>
             <div class="card"> <img class="card-img-top" src="./assets/custom/img/events/2017csrc_min.jpg" alt="Recruiting @ VT CSRC Career Fair">
               <div class="card-body">
                 <h4 class="card-title">
@@ -531,8 +531,6 @@
                 <p class="card-text">Several employees attended the Virginia Tech Computer Science Resources Consortium Career Fair in search of another group of interns for the Summer of 2018!</p>
               </div>
             </div>
-          </div>
-          <div class="card-deck g-mx-20 g-my-20">
             <div class="card"> <img class="card-img-top" src="./assets/custom/img/events/2017-summer-internship-min.jpg" alt="2017 Summer Internship">
               <div class="card-body">
                 <h4 class="card-title"><a href="https://goo.gl/photos/G1P76LwSpCGRwUqb6" target="_blank" rel="noopener">2017 Summer Internship</a></h4>
@@ -547,25 +545,10 @@
             </div>
           </div>
           <div class="card-deck g-mx-20 g-my-20">
-            <div class="card"> <img class="card-img-top" src="./assets/custom/img/events/game-night-min.jpg" alt="2017 Game Night">
-              <div class="card-body">
-                <h4 class="card-title"><a href="https://photos.app.goo.gl/xsfrqKKkmplU1D133" target="_blank" rel="noopener">Game Nights</a></h4>
-                <p class="card-text">Employees always have a good time at our monthly game nights in our wonderful office space.
-                </p>
-              </div>
-            </div>
             <div class="card"> <img class="card-img-top" src="./assets/custom/img/events/2017serverless-min.jpg" alt="2017 Serverless Conference">
               <div class="card-body">
                 <h4 class="card-title"><a href="https://goo.gl/photos/4T3HKxNofJPSDrqt8" target="_blank" rel="noopener">2017 Serverless Conf</a></h4>
                 <p class="card-text">Two of our employees learned a lot while taking in some of the sights at Serverless Conf in Austin, Texas!</p>
-              </div>
-            </div>
-          </div>
-          <div class="card-deck g-mx-20 g-my-20">
-            <div class="card"> <img class="card-img-top" src="./assets/custom/img/events/case-holiday-party-min.jpg" alt="2016 Holiday Party">
-              <div class="card-body">
-                <h4 class="card-title"> <a href="https://goo.gl/photos/BvT9SvVD4zVXMSw5A" target="_blank" rel="noopener">2016 Holiday Party</a></h4>
-                <p class="card-text">Employees and their loved ones had a great time at our annual holiday party. This year the party was held at Stone Tower Winery in Leesburg and featured an evening of giving, food, poker, and fun.</p>
               </div>
             </div>
             <div class="card"> <img class="card-img-top" src="./assets/custom/img/events/case-family-picnic-min.jpg" alt="2016 Family Picnic">
@@ -574,23 +557,22 @@
                 <p class="card-text">Our annual Summer picnic is always a blast for employees and their families and this year was no different. The kids (and some adults) enjoyed the inflatable obstacle course and face painting.</p>
               </div>
             </div>
-          </div>
-          <div class="card-deck g-mx-20 g-my-20">
             <div class="card"> <img class="card-img-top" src="./assets/custom/img/events/aws-trip-min.jpg" alt="re:Invent 2016">
               <div class="card-body">
                 <h4 class="card-title"><a href="https://goo.gl/photos/vfdM1cf6bihNDoNcA" target="_blank" rel="noopener">re:Invent 2016</a></h4>
                 <p class="card-text">Case Consulting was well represented at AWS re:Invent this year. Employees enjoyed all of the talks and after-hours events and can't wait to go back next year.</p>
               </div>
             </div>
+
+          </div>
+          <!-- Row -->
+          <div class="card-deck g-mx-20 g-my-20">
             <div class="card"> <img class="card-img-top" src="./assets/custom/img/events/rogue_one-min.jpg" alt="Rogue One: A Star Wars Movie">
               <div class="card-body">
                 <h4 class="card-title"><a href="https://goo.gl/photos/qNT8KHuR7HTLq3tK6" target="_blank" rel="noopener">Rogue One: A Star Wars Movie</a></h4>
                 <p class="card-text">The force is strong with us as we watched Rogue One at the Alamo Drafthouse.</p>
               </div>
             </div>
-          </div>
-          <!-- Row -->
-          <div class="card-deck g-mx-20 g-my-20">
             <!-- Item -->
             <div class="card"> <img class="card-img-top" src="./assets/custom/img/events/2015-holiday-party-min.jpg" alt="2015 Holiday Party">
               <div class="card-body">
@@ -605,6 +587,17 @@
               </div>
             </div>
             <!-- Item End -->
+          </div>
+          <div class="card-deck g-mx-20 g-my-20">
+            <div class="card"> <img class="card-img-top" src="./assets/custom/img/events/game-night-min.jpg" alt="2017 Game Night">
+              <div class="card-body">
+                <h4 class="card-title"><a href="https://photos.app.goo.gl/xsfrqKKkmplU1D133" target="_blank" rel="noopener">Game Nights</a></h4>
+                <p class="card-text">Employees always have a good time at our monthly game nights in our wonderful office space.
+                </p>
+              </div>
+            </div>
+            <div class="card card-offset"></div>
+            <div class="card card-offset"></div>
           </div>
         </div>
         <div class="text-center">
